Added shadow pairing

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,6 +47,7 @@
 
     <script src="js/scenes/MenuScene.js"></script>
     <script src="js/scenes/ShopGame.js"></script>
+    <script src="js/scenes/ShadowGame.js"></script>
 
     <script src="js/main.js"></script>
 </head>
